# EMp3Record

./: README.md  build.gradle  gradlew  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xjl/emp3/demo/: MainActivity.kt
app/src/main/java/com/xjl/emp3record/: MainActivity.java  RealTimeWaveRecordActivity.java  TouchAudioRecordActivity.java  WaveAudioRecordActivity.java
app/src/main/res/layout/: activity_main.xml  activity_wave_audio_record.xml
app/src/main/res/values/: strings.xml
emp3recorder/: CMakeLists.txt  build.gradle
emp3recorder/src/main/: AndroidManifest.xml
emp3recorder/src/main/cpp/: com_xjl_emp3recorder_mp3record_LameUtil.h  lame_util.c
emp3recorder/src/main/java/com/xjl/emp3recorder/logger/: DefaultLogger.kt  Logger.kt  LoggerInterface.kt
emp3recorder/src/main/java/com/xjl/emp3recorder/mp3record/: DataEncodeThread.java  DataEncodeThread.kt  LameUtil.java  LameUtil.kt  MP3Recorder.java  MP3Recorder.kt  OnRecordListener.java  PCMFormat.java  PCMFormat.kt
emp3recorder/src/main/java/com/xjl/emp3recorder/realtime_wave/: BaseRecorder.java
emp3recorder/src/main/java/com/xjl/emp3recorder/record_wave/: RecordWaveView.java  RecordWaveView.kt  RenderView.java  RenderView.kt
emp3recorder/src/main/java/com/xjl/emp3recorder/utils/: MediaPlayerHepler.kt  RecordBindInterface.kt  WaveRecordBinder.java  WaveRecordBinder.kt
emp3recorder/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
